--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: go
 go:
   - "1.10"
+install:
+  - export PATH=$PATH:$GOPATH/bin
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out
+after_script:
+  - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
