Update and rename test.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Test
+name: build
 on: [push]
 jobs:
 
-  test:
-    name: Test
+  go1.13:
+    name: go1.13
     runs-on: ubuntu-latest
     steps:
 
