--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -15,7 +15,16 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install benchstat
         run: go install golang.org/x/perf/cmd/benchstat@latest
-      - name: Diff
-        run: benchstat new.txt
+
       - name: Benchmark
         run: go test -bench=. -benchmem -run=^$ -count=20 -timeout=30m | tee new.txt
+
+      - name: Checkout master
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Benchmark
+        run: go test -bench=. -benchmem -run=^$ -count=20 -timeout=30m | tee old.txt
+
+      - name: Diff
+        run: benchstat old.txt new.txt
