--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -16,15 +16,15 @@ jobs:
       - name: Install benchstat
         run: go install golang.org/x/perf/cmd/benchstat@latest
 
-      - name: Benchmark
-        run: go test -bench=^expr -benchmem -run=^$ -count=20 -timeout=30m | tee /tmp/new.txt
+      - name: Benchmark new code
+        run: go test -bench=. -benchmem -run=^$ -count=20 -timeout=30m | tee /tmp/new.txt
 
       - name: Checkout master
         uses: actions/checkout@v2
         with:
           ref: master
-      - name: Benchmark
-        run: go test -bench=^expr -benchmem -run=^$ -count=20 -timeout=30m | tee /tmp/old.txt
+      - name: Benchmark master
+        run: go test -bench=. -benchmem -run=^$ -count=20 -timeout=30m | tee /tmp/old.txt
 
       - name: Diff
         run: benchstat /tmp/old.txt /tmp/new.txt
