--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-versions: [ '1.13', '1.14', '1.15', '1.16' , '1.17', '1.18', '1.19' ]
+        go-versions: [ '1.13', '1.14', '1.15', '1.16' , '1.17', '1.18', '1.19', '1.20', '1.21' ]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Go ${{ matrix.go-version }}
