Add build tag: expr_debug

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,14 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Test
         run: go test ./...
+
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Go 1.18
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.18
+      - name: Test
+        run: go test -tags=expr_debug -run=TestDebugger -v ./vm
