--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Go 1.18
+      - name: Setup Go 1.12
         uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: 1.12
       - name: Test
-        run: npx zx --experimental .github/scripts/coverage.mjs
+        run: npx zx .github/scripts/coverage.mjs
