--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-vm/func_types[generated].go linguist-language=txt
-vm/opcodes.go linguist-language=txt
+vm/func_types\[generated\].go linguist-language=txt
