--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,12 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+      - name: Set up gotestfmt
+        run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@latest          
       - name: Test
-        run: go test ./...
+        run: |
+          set -euo pipefail 
+          go test ./... | gotestfmt
 
   debug:
     runs-on: ubuntu-latest
