--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Test
         run: |
           set -euo pipefail 
-          go test -json -v ./... 2>&1 | gotestfmt
+          go test -json -v ./... 2>&1 | gotestfmt -hide all
 
   debug:
     runs-on: ubuntu-latest
