--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-      - name: Set up gotestfmt
-        run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@latest          
       - name: Test
         run: |
           set -euo pipefail 
-          go test -json -v ./... 2>&1 | gotestfmt -hide all
+          go test ./...
 
   debug:
     runs-on: ubuntu-latest
