Revert "Fix diff.yml"
This reverts commit 0bae5401b3f7a4e1303db30d9dcb4ffd384b36ee.

--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        ref: [master, ${{ github.sha }}]
         include:
           - ref: master
             name: old
-          - ref: ${{ github.event.pull_request.head.sha }}
+          - ref: ${{ github.sha }}
             name: new
     steps:
       - name: Setup Go 1.18
